# dynamic-state-machine

./: .editorconfig  .gitignore  CMakeLists.txt  Config.cmake.in  LICENSE  README.md  codecov.yaml  package-lock.cmake
.github/workflows/: codeql-analysis.yml  coverity.yml  fuzz.yml  linux.yml  macos.yml  tests.yml  windows.yml
cmake/: Config.cmake.in  FindDynamicStateMachine.cmake
examples/: CMakeLists.txt  composite_state.cpp  deep_history.cpp  entry_exit_actions.cpp  full_example.cpp  minimal_enclosed.cpp  minimal_flat.cpp  orthogonal_regions.cpp  self_transition.cpp  shallow_history.cpp  transition_action.cpp  transition_guard.cpp
examples/entry_exit_actions/: CMakeLists.txt  entry_exit_actions.cpp
examples/minimal_enclosed/: CMakeLists.txt  minimal_enclosed.cpp
examples/minimal_flat/: CMakeLists.txt
examples/self_transition/: CMakeLists.txt
examples/transition_action/: CMakeLists.txt  transition_action.cpp
include/dsm/: dsm.hpp  log.hpp
resources/: basic.puml  composite_state.puml  deep_history.puml  entry_exit_actions.puml  orthogonal_regions.puml  self_transition.puml  shallow_history.puml  transition_action.puml  transition_guard.puml
tests/: CMakeLists.txt  main.cpp
