cmake_minimum_required(VERSION 3.16)

add_executable(minimal_flat minimal_flat.cpp)
add_executable(minimal_enclosed minimal_enclosed.cpp)
add_executable(entry_exit_actions entry_exit_actions.cpp)
add_executable(transition_action transition_action.cpp)
add_executable(transition_guard transition_guard.cpp)
add_executable(self_transition self_transition.cpp)

target_link_libraries(minimal_flat PRIVATE dsm::dsm)
target_link_libraries(minimal_enclosed PRIVATE dsm::dsm)
target_link_libraries(entry_exit_actions PRIVATE dsm::dsm)
target_link_libraries(transition_action PRIVATE dsm::dsm)
target_link_libraries(transition_guard PRIVATE dsm::dsm)
target_link_libraries(self_transition PRIVATE dsm::dsm)

set_target_properties(minimal_flat PROPERTIES FOLDER examples)
set_target_properties(minimal_enclosed PROPERTIES FOLDER examples)
set_target_properties(entry_exit_actions PROPERTIES FOLDER examples)
set_target_properties(transition_action PROPERTIES FOLDER examples)
set_target_properties(transition_guard PROPERTIES FOLDER examples)
set_target_properties(self_transition PROPERTIES FOLDER examples)
